# dct-autoencoder

./: pyproject.toml  usage.ipynb
dct_autoencoder/: basis.py  core.py
