[project]
authors = [
    {name = "Dariush Bahrami", email = "dariushbahrami1993@gmail.com"},
]
requires-python = "<4.0,>=3.10"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy",
]
name = "dct-autoencoder"
version = "0.2.1"
description = ""
readme = "README.md"

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
